--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,10 +14,34 @@
 
     <div class="row" id="tasks"></div>
   </div>
-  <script>
-    const electron = require('electron')
-    const tasksContainer = document.querySelectorAll('#tasks')
 
+  <script>
+    const { ipcRenderer } = require('electron')
+    const templateTask = ({ name, time, description }) => `<div class="col-md-6 p-2">
+    <div class="card text-center">
+      <div class="card-header">
+          <h5 class="card-title">
+            ${name}
+            </h5>
+        </div>
+      <div class="card-body">${time}<hr>${description}</div>
+      <div class="card-footer"><button class="btn btn-success btn-sm">
+    Terminado
+  </button>
+  </div>
+    </div>
+  </div>`
+    const tasksContainer = document.querySelector('#tasks')
+
+    ipcRenderer.on('task:new', (e, newTask) => {
+      tasksContainer.innerHTML += templateTask(newTask)
+      const btns = document.querySelectorAll('.btn.btn-success')
+      btns.forEach(btn => {
+        btn.addEventListener('click', e => {
+          e.target.parentElement.parentElement.parentElement.remove()
+        })
+      })
+    })
 
   </script>
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
